# perry

./: CLAUDE.md  Cargo.toml  README.md  run_llvm_sweep.sh  tiny_test  wasm_test
.github/workflows/: container-tests.yml  test.yml
crates/perry/: Cargo.toml
crates/perry-codegen-arkts/: Cargo.toml
crates/perry-codegen-arkts/src/: lib.rs
crates/perry-codegen/src/: collectors.rs  lower_call.rs  runtime_decls.rs
crates/perry-container-compose/: Cargo.toml
crates/perry-container-compose/examples/forgejo/: main.ts
crates/perry-container-compose/examples/multi-service/: main.ts
crates/perry-container-compose/examples/simple/: main.ts
crates/perry-container-compose/fuzz/: Cargo.toml  README.md
crates/perry-container-compose/fuzz/fuzz_targets/: compose_spec_json_round_trip.rs  compose_yaml_parse.rs  env_interpolation.rs
crates/perry-container-compose/src/: backend.rs  capabilities.rs  cli.rs  compose.rs  config.rs  error.rs  ffi.rs  installer.rs  lib.rs  main.rs  orchestrate.rs  project.rs  service.rs  types.rs  workload.rs  yaml.rs
crates/perry-container-compose/src/commands/: build.rs  inspect.rs  mod.rs  run.rs  start.rs  stop.rs
crates/perry-container-compose/src/testing/: mock_backend.rs  mod.rs
crates/perry-container-compose/tests/: backend_tests.rs  compose_tests.rs  conformance.rs  container_ops.rs  error_tests.rs  exec_raw_timeout.rs  fixtures_tests.rs  functional_orchestration.rs  integration_tests.rs  live_runtime_tests.rs  orchestration.rs  round_trip.proptest-regressions  round_trip.rs  security_opt_parsing.rs  service_tests.rs  types_tests.rs  yaml_tests.proptest-regressions  yaml_tests.rs
crates/perry-container-compose/tests/common/: mod.rs
crates/perry-container-compose/tests/fixtures/: cyclic-deps.yaml  diamond-deps.yaml  external-network.yaml  healthcheck-gated.yaml  simple-two-service.yaml
crates/perry-container-e2e/: Cargo.toml
crates/perry-container-e2e/src/: lib.rs
crates/perry-container-e2e/tests/: e2e_container.rs
crates/perry-doc-tests/: Cargo.toml
crates/perry-doc-tests/src/: image_diff.rs
crates/perry-hir/src/: ir.rs  lower.rs  lower_decl.rs
crates/perry-hir/src/lower/: expr_call.rs
crates/perry-runtime/src/: json.rs  value.rs
crates/perry-stdlib/: Cargo.toml
crates/perry-stdlib/src/: lib.rs
crates/perry-stdlib/src/common/: handle.rs
crates/perry-stdlib/src/container/: backend.rs  capability.rs  compose.rs  mod.rs  types.rs  verification.rs
crates/perry-stdlib/tests/: container_backend_selection.rs  container_capability_tests.rs  container_extra_tests.rs  container_ffi_tests.rs  container_props.proptest-regressions  container_props.rs  container_verification_tests.rs  container_workspace_invariants.rs
crates/perry/src/commands/: compile.rs  deps.rs  stdlib_features.rs
docs/examples/stdlib/container/: snippets.ts
docs/src/: SUMMARY.md
docs/src/container/: compose.md  containers.md  determinism.md  networking.md  overview.md  production-patterns.md  security.md  volumes.md
docs/src/plugins/: creating-plugins.md  overview.md
docs/src/stdlib/: container.md  fs.md  overview.md
example-code/forgejo-deployment/: main.ts  perry-globals.d.ts  tsconfig.json
examples/container/multi-service/: main.ts
examples/container/simple/: main.ts
src/core/wit/: perry-container.wit
test-files/: test_issue_307_json_stringify_overflow_fields.ts  test_issue_311_object_property_for_of.ts  test_issue_313_arrow_stored_in_field.ts  test_issue_314_closure_call_arity.ts
test-parity/: known_failures.json
tests/e2e/: forgejo-stack.e2e.ts  perry-globals.d.ts  redis-smoke.e2e.ts  tsconfig.json
types/perry/compose/: index.d.ts  package.json
types/perry/container/: index.d.ts  package.json
types/perry/workloads/: index.d.ts
