[package]
name = "perry-doc-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "doc-tests"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
clap = { workspace = true }
dssim-core = "3.4"
image = { version = "0.25", default-features = false, features = ["png"] }
rgb = "0.8"

[dev-dependencies]
tempfile = "3"
