[package]
name = "perry-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standard library implementations: fs, http, crypto, mysql, postgres"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
# Default: include everything for backwards compatibility
default = ["full"]

# Full stdlib - everything included
full = ["http-server", "http-client", "database", "crypto", "compression", "email", "websocket", "image", "scheduler", "ids", "html-parser", "rate-limit", "validation", "net", "tls"]

# Minimal core - just what's needed for basic programs
core = []

# HTTP server (hyper-based native framework)
# Note: dashmap is now always-on (used by core handle registry), no longer listed here.
http-server = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes", "async-runtime"]

# HTTP client (node-fetch, axios)
http-client = ["dep:reqwest", "async-runtime"]

# WebSocket
websocket = ["dep:tokio-tungstenite", "dep:futures-util", "async-runtime"]

# Raw TCP sockets (`net.Socket` — Postgres wire driver, custom protocols).
net = ["async-runtime"]

# TLS — direct `tls.connect()` and `socket.upgradeToTLS()` (Postgres SSLRequest flow).
# Uses rustls (not native-tls) to avoid OpenSSL on every platform and keep Android
# cross-compile unblocked; matches reqwest/tokio-tungstenite/mongodb feature flags.
tls = ["net", "dep:tokio-rustls", "dep:rustls", "dep:rustls-native-certs"]

# Databases
database = ["database-postgres", "database-mysql", "database-sqlite", "database-redis", "database-mongodb"]
database-postgres = ["dep:sqlx", "async-runtime"]
database-mysql = ["dep:sqlx", "async-runtime"]
database-sqlite = ["dep:rusqlite"]
database-redis = ["dep:redis", "async-runtime"]
database-mongodb = ["dep:mongodb", "dep:bson", "dep:futures-util", "async-runtime"]

# Crypto (sha256, md5, bcrypt, jwt, etc.)
# Implies `async-runtime` because bcrypt/jwt/argon2 hashing offloads to
# `tokio::task::spawn_blocking`, and `ids` because `crypto.randomUUID()`
# delegates to the `uuid` crate.
crypto = ["dep:sha2", "dep:sha1", "dep:md-5", "dep:hex", "dep:hmac", "dep:bcrypt", "dep:jsonwebtoken", "dep:aes", "dep:cbc", "dep:scrypt", "dep:pbkdf2", "dep:argon2", "dep:base64", "dep:x25519-dalek", "dep:ed25519-dalek", "dep:aes-gcm", "dep:hkdf", "async-runtime", "ids"]

# Compression (zlib)
compression = ["dep:flate2"]

# Email (nodemailer)
email = ["dep:lettre", "async-runtime"]

# Image processing (sharp)
image = ["dep:image"]

# HTML parsing (cheerio)
html-parser = ["dep:scraper"]

# Scheduler (cron)
scheduler = ["dep:cron", "dep:tokio-cron-scheduler", "async-runtime"]

# Rate limiting
rate-limit = ["dep:governor", "async-runtime"]

# Validation
validation = ["dep:validator", "dep:regex"]

# UUID/nanoid
ids = ["dep:uuid", "dep:nanoid"]

# Async runtime (tokio) - internal feature
async-runtime = ["dep:tokio"]

# OCI container subsystem (perry/container, perry/compose, perry/workloads).
# Pulls in perry-container-compose and exposes the `js_container_*` and
# `js_compose_*` FFI exports that the codegen dispatch table targets.
container = ["dep:perry-container-compose", "async-runtime"]

[dependencies]
perry-runtime = { workspace = true, features = ["stdlib"] }
# Re-bundle updater symbols into libperry_stdlib.a so user binaries that
# call `perry/updater` resolve at link time without extra wiring.
perry-updater = { workspace = true }
# Container subsystem (gated behind the `container` feature). The stdlib
# container/ module re-exports `perry_container_compose::*` types and
# delegates orchestration to `ComposeEngine` / `ContainerBackend`.
#
# NOTE 1: this is a DIRECT path dep (not `workspace = true`) so the
# build doesn't break if the `[workspace.dependencies]
# perry-container-compose` line gets stripped. The `[workspace] members`
# entry is still required for `cargo build -p perry-container-compose`
# to succeed — that's enforced by the `crate_in_workspace_members` test
# in this crate's tests/.
#
# NOTE 2: do NOT enable the crate's own `ffi` feature here — it exports
# a *different* legacy `js_compose_*` shape (YAML-file-path-based) that
# would collide with stdlib's canonical SPEC §9.1 stack-handle
# signatures at link.
perry-container-compose = { path = "../perry-container-compose", optional = true }

thiserror.workspace = true
anyhow.workspace = true

# Always needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itoa = "1.0"
ryu = "1.0"
once_cell = "1.19"
lazy_static = "1.5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"  # Required by lodash (core module)

# === OPTIONAL DEPENDENCIES ===

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros", "io-util"], optional = true }

# HTTP Server
hyper = { version = "1.4", features = ["server", "http1", "http2"], optional = true }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1.5", optional = true }
# DashMap is used by the always-on handle registry (`common/handle.rs`),
# so it must NOT be optional — every minimal-stdlib build needs it.
dashmap = "6.0"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2"], default-features = false, optional = true }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"], optional = true }
futures-util = { version = "0.3", optional = true }

# TLS (for net.Socket.upgradeToTLS and tls.connect) — rustls-only, no OpenSSL.
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
rustls-native-certs = { version = "0.8", optional = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "postgres", "chrono"], optional = true }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }
mongodb = { version = "3.5", default-features = false, features = ["compat-3-0-0", "rustls-tls", "dns-resolver"], optional = true }
bson = { version = "2.9", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# Crypto
sha2 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
hmac = { version = "0.12", optional = true }
bcrypt = { version = "0.15", optional = true }
jsonwebtoken = { version = "9.3", optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
scrypt = { version = "0.11", optional = true }
pbkdf2 = { version = "0.12", features = ["simple"], optional = true }
argon2 = { version = "0.5", optional = true }
base64 = { version = "0.22", optional = true }
x25519-dalek = { version = "2.0", features = ["static_secrets"], optional = true }
ed25519-dalek = { version = "2.1", optional = true }
aes-gcm = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }

# Compression
flate2 = { version = "1.0", optional = true }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder", "hostname", "pool"], optional = true }

# Image
image = { version = "0.25", optional = true }

# HTML parser
scraper = { version = "0.19", optional = true }

# Scheduler
cron = { version = "0.12", optional = true }
tokio-cron-scheduler = { version = "0.10", optional = true }

# Rate limiting
governor = { version = "0.6", optional = true }

# Validation
validator = { version = "0.18", features = ["derive"], optional = true }
regex = { version = "1.10", optional = true }

# IDs
uuid = { version = "1.11", features = ["v4", "v1", "v7"], optional = true }
nanoid = { version = "0.4", optional = true }

# LRU Cache
lru = "0.12"

# CLI parsing (Commander)
clap = { version = "4.4", features = ["derive"] }

# Decimal math (Big.js / Decimal.js)
rust_decimal = { version = "1.33", features = ["maths"] }

[dev-dependencies]
# Property tests for the container FFI bridge (gated behind `container` feature
# at the test-file level via `#[cfg(feature = "container")]`).
proptest = "1"
serde_yaml = "0.9"
